--- a/Lesson07/Ex06-pra.html
+++ b/Lesson07/Ex06-pra.html
@@ -14,74 +14,74 @@
             <div class="row">
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                         <span>50%</span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                         <span>50%</span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
                 <div class="col">
                     <div class="item">
-                        <img src="images/endow-1.jpg" alt="endow-1">
+                        <img src="images/logo.png" alt="logo Devmaster">
                     </div>
                 </div>
             </div>
