--- a/Lesson15/Lab03.html
+++ b/Lesson15/Lab03.html
@@ -35,6 +35,15 @@
                 <li><a href="javascript:void(0)">
                     <img src="images/img6.jfif" alt="ảnh">
                 </a></li>
+                <li><a href="javascript:void(0)">
+                    <img src="images/img6.jfif" alt="ảnh">
+                </a></li>
+                <li><a href="javascript:void(0)">
+                    <img src="images/img6.jfif" alt="ảnh">
+                </a></li>
+                <li><a href="javascript:void(0)">
+                    <img src="images/img6.jfif" alt="ảnh">
+                </a></li>
             </ul>
         </div>
     </section>
